# NeuralVocoders

./: .gitignore  README.md  datamodule.py  index.html  pyproject.toml  recon.py  train.py  trainmodule.py
config/: HiFi-GAN V1.json  HiFi-GAN V2.json  HiFi-GAN V3.json  MISRNet.json  iSTFTMISRNet.json  iSTFTNet.json
modules/: discriminators.py  generators.py  mel.py  stft.py
