[tool.poetry]
name = "neuralvocoders"
version = "0.0.1"
description = "Implementations of HiFi-GAN, iSTFTNet and MISRNet"
authors = ["Frederica <mail@otaku.engineer>"]
license = "AGPL-3.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pip = "^24.0"
numpy = "1.*"
torch = "^2.3.1"
matplotlib = "^3.9.1"
soundfile = "^0.12.1"
resampy = "^0.4.3"
lightning = {extras = ["extra"], version = "^2.3.3"}
tensorboard = "^2.17.0"
librosa = "^0.10.2.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
